--- a/src/main/freemarker/templates/userDemo.html
+++ b/src/main/freemarker/templates/userDemo.html
@@ -24,7 +24,7 @@ hello.on('auth.login', function(auth){
 			label.id = "profile_"+auth.network;
 			document.getElementById('profile').appendChild(label);
 		}
-		label.innerHTML = '<img src="'+ r.thumbnail +'" /> Hey '+r.name;
+		label.innerHTML = '<h2>' + auth.network + '</h2><img src="'+ r.thumbnail +'" /> Hey '+r.name;
 	});
 });
 
