Completed login logic for social networks

--- a/src/main/freemarker/templates/index.html
+++ b/src/main/freemarker/templates/index.html
@@ -17,6 +17,7 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/1.2.6/jquery.floatThead.min.js"></script>
+	<script src="hello/hello.all.js"></script>
 	
 	<#include "index/scripts.html"/>
 	
