--- a/src/main/freemarker/templates/unknown/login.html
+++ b/src/main/freemarker/templates/unknown/login.html
@@ -3,12 +3,28 @@
 <script>
 loadPageScript(function() {
 
+	hello.init({ 
+		facebook : '1525659471006265',
+		google   : '129606498407-7dkt6329l3sgfgjck09rn8avj042hut1.apps.googleusercontent.com',
+		twitter  : 'maUVScpJ3ndp817EQNdCB9d0F',
+		linkedin : '75rpy5gpux9oxm'
+	},{
+		redirect_uri : '/hello/redirect.html',
+		oauth_proxy  : '/helloshim'
+	});
+	
+	
 	page.onload = function() {
 	}
 	
 });
 </script>
 	
-This is a login page
+<button onclick="hello('facebook').login()">facebook</button>
+<button onclick="hello('google').login()">google</button>
+<button onclick="hello('twitter').login()">twitter</button>
+<button onclick="hello('linkedin').login()">linkedin</button>
+
+<div id="profile"></div>
 
 </@page>
