--- a/src/main/freemarker/templates/index.html
+++ b/src/main/freemarker/templates/index.html
@@ -1,4 +1,4 @@
-<!-- Do not modify this file -->
+<!-- Do not modify this file : modify theme/authenticated.html, theme/unknown.html, and index/scripts.html instead -->
 
 <html>
 
@@ -7,7 +7,9 @@
 	<title></title>
 	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="theme/unknown.css">
+	<link rel="stylesheet" href="theme/authenticated.css">
 </head>
 
 <body>
@@ -16,7 +18,13 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/1.2.6/jquery.floatThead.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/floatthead/1.2.6/jquery.floatThead.min.js"></script>
+	<script>
+		var Profound = Profound || {};
+		Profound.Config = Profound.Config || {};
+		Profound.Util = Profound.Util || {};
+	</script>
+	<script src="configuration.js"></script>
 	<script src="hello/hello.all.js"></script>
 	
 	<#include "index/scripts.html"/>
