--- a/src/main/freemarker/templates/unknown/login.html
+++ b/src/main/freemarker/templates/unknown/login.html
@@ -1,30 +1,70 @@
 <@page title="Login">
 
 <script>
-loadPageScript(function() {
+	loadPageScript(function() {
 
-	hello.init({ 
-		facebook : '1525659471006265',
-		google   : '129606498407-7dkt6329l3sgfgjck09rn8avj042hut1.apps.googleusercontent.com',
-		twitter  : 'maUVScpJ3ndp817EQNdCB9d0F',
-		linkedin : '75rpy5gpux9oxm'
-	},{
-		redirect_uri : '/hello/redirect.html',
-		oauth_proxy  : '/helloshim'
+		page.message = ko.observable();
+
+		page.onload = function() {
+		}
+
 	});
-	
-	
-	page.onload = function() {
-	}
-	
-});
 </script>
-	
-<button onclick="hello('facebook').login()">facebook</button>
-<button onclick="hello('google').login()">google</button>
-<button onclick="hello('twitter').login()">twitter</button>
-<button onclick="hello('linkedin').login()">linkedin</button>
 
-<div id="profile"></div>
+<div class="container" data-bind="with: page">
+
+	<div class="omb_login">
+		<h3 class="omb_authTitle">
+			Login or <a href="#">Sign up</a>
+		</h3>
+		<div class="row omb_row-sm-offset-3 omb_socialButtons">
+			<div class="col-xs-4 col-sm-2">
+				<a href="#" class="btn btn-lg btn-block omb_btn-facebook" onclick="hello('facebook').login()"> <i class="fa fa-facebook visible-xs"></i> <span class="hidden-xs">Facebook</span>
+				</a>
+			</div>
+			<div class="col-xs-4 col-sm-2">
+				<a href="#" class="btn btn-lg btn-block omb_btn-twitter" onclick="hello('twitter').login()"> <i class="fa fa-twitter visible-xs"></i> <span class="hidden-xs">Twitter</span>
+				</a>
+			</div>
+			<div class="col-xs-4 col-sm-2">
+				<a href="#" class="btn btn-lg btn-block omb_btn-google" onclick="hello('google').login()"> <i class="fa fa-google-plus visible-xs"></i> <span class="hidden-xs">Google+</span>
+				</a>
+			</div>
+		</div>
+
+		<div class="row omb_row-sm-offset-3 omb_loginOr">
+			<div class="col-xs-12 col-sm-6">
+				<hr class="omb_hrOr">
+				<span class="omb_spanOr">or</span>
+			</div>
+		</div>
+
+		<div class="row omb_row-sm-offset-3">
+			<div class="col-xs-12 col-sm-6">
+				<form class="omb_loginForm" action="" autocomplete="off" method="POST">
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-user"></i></span> <input type="text" class="form-control" name="username" placeholder="email address">
+					</div>
+					<span class="help-block"></span>
+
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-lock"></i></span> <input type="password" class="form-control" name="password" placeholder="Password">
+					</div>
+					<span class="help-block">Password error</span>
+
+					<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+				</form>
+			</div>
+		</div>
+		<div class="row omb_row-sm-offset-3">
+			<div class="col-xs-12 col-sm-3">
+				<p class="omb_forgotPwd">
+					<a href="#">Forgot password?</a>
+				</p>
+			</div>
+		</div>
+	</div>
+
+</div>
 
 </@page>
