Adding sessions from the old project to keep web namespace clean

--- a/src/main/freemarker/templates/theme/authenticated.html
+++ b/src/main/freemarker/templates/theme/authenticated.html
@@ -21,8 +21,12 @@
 	
 	<div id="profoundInnerPage"></div>
 	
-	<div class="row">Some footer information</div>
-	
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Place sticky footer content here.</p>
+      </div>
+    </footer>
+    	
 	<script>
 	var initialHash = window.location.hash;
 	window.onlogin = function() {
