--- a/src/main/freemarker/templates/index.html
+++ b/src/main/freemarker/templates/index.html
@@ -4,12 +4,14 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
 	<title></title>
 	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="theme/unknown.css">
 	<link rel="stylesheet" href="theme/authenticated.css">
+	<#include "index/stylesheets.html"/>
 </head>
 
 <body>
