Added the public not-logged-in pages developed during the MA sprint

--- a/src/main/freemarker/templates/unknown/resetPassword.html
+++ b/src/main/freemarker/templates/unknown/resetPassword.html
@@ -1,1 +1,140 @@
-Reset your password here
+<@page title="Reset Password">
+
+<script>
+	loadPageScript(function() {
+		
+		page.token = ko.observable();
+		page.id = ko.observable();
+		page.name = ko.observable();
+		page.message = ko.observable();
+		page.password = ko.observable().extend({ required: true }).extend({
+	        validation: { 
+				validator: function (value, validate) {
+					if (!validate) { return true; }
+					return zxcvbn(page.password()).score > 1;
+				},
+				message: 'Weak'
+			},
+		});
+		page.confirm = ko.observable().extend({ required: true }).extend({  // custom validator
+	        validation: { 
+				validator: function (value, validate) {
+					if (!validate) { return true; }
+					if (! page.password.isValid()) { return true; }
+					return value === page.password();
+				},
+				message: 'Mismatched'
+			}
+	    });
+
+		page.reset = function() {
+			page.id(null);
+			page.token(null);
+			page.name(null);
+			page.message(null);
+			page.password(null);
+			page.confirm(null);
+		}
+		
+		page.onload = function() {
+			page.reset();
+			if (window.queryParameters && window.queryParameters.token && window.queryParameters.token[0]) {
+				page.token(window.queryParameters.token[0]);
+				app.ajax('GET', '/api/passwords/reset/' + page.token(), null, function(response) {
+					if (!response) {
+						return;
+					}
+					if (! response.success) {
+						page.message(response.message);
+						return;
+					}
+					page.name(response.name);
+					page.id(response.id);
+				});
+			}
+		}
+
+		page.passwordStrength = ko.computed(function() {
+			if (! page.password()) {
+				return null;
+			}
+			if (! page.password.isModified()) {
+				return null;
+			}
+			var z = zxcvbn(page.password());
+			var ret = {
+				percentage: (20 + (z.score * 20)) + "%"
+			};
+			switch(z.score) {
+			case 0: ret.message = 'poor'; ret.color = 'danger'; break;
+			case 1: ret.message = 'weak'; ret.color = 'danger'; break;
+			case 2: ret.message = 'fair'; ret.color = 'warning'; break;
+			case 3: ret.message = 'good'; ret.color = 'success'; break;
+			case 4: ret.message = 'strong'; ret.color = 'success'; break;
+			}
+			return ret;
+		});
+
+		page.savePassword = function() {
+			app.ajax('PUT', '/api/passwords/reset/' + page.token(), page.password(), function(response) {
+				if (! response) {
+					return;
+				}
+				if (response.success) {
+					Profound.Util.setHash('login.html');
+					return;
+				}
+				if (response.message) {
+					page.message(response.message);
+				}
+			});
+		};
+
+		page.isValid = ko.computed(function() {
+			return page.id() && page.password.isValid() && page.confirm.isValid();
+		});
+		
+	});
+	
+</script>
+
+<div class="container" data-bind="with: page">
+
+	<div class="omb_login">
+		<h3 class="omb_authTitle">
+			Reset Your Password <span data-bind="text: name"></span>
+		</h3>
+
+		<div class="row omb_row-sm-offset-3">
+			<div class="col-xs-12 col-sm-6">
+				<form class="omb_loginForm" action="" autocomplete="off" data-bind="if: id()">
+
+					<div class="input-group" style="margin-bottom: 10px">
+						<span class="input-group-addon" data-bind="css: { validationMessage : password.isModified() && ! password.isValid() }"><i class="fa fa-fw fa-lock"></i></span> <input data-bind="textInput: password" type="password" class="form-control" name="password" placeholder="Password">
+					</div>
+
+					<!-- ko if: passwordStrength() -->
+					<div class="progress"  style="margin-bottom: 10px" >
+						<div class="progress-bar" role="progressbar"data-bind="style: { width: passwordStrength().percentage }, css: 'progress-bar-' + passwordStrength().color ">
+							<span data-bind="text: passwordStrength().message"></span>
+						</div>
+					</div>
+					<!-- /ko -->
+
+					<div class="input-group">
+						<span class="input-group-addon" data-bind="css: { validationMessage : confirm.isModified() && ! confirm.isValid() }"><i class="fa fa-fw fa-lock"></i></span> <input data-bind="textInput: confirm" type="password" class="form-control" name="confirm" placeholder="Confirm Password">
+					</div>
+					
+					<span class="help-block" data-bind="text: message"></span>
+
+					<button class="btn btn-lg btn-primary btn-block" type="submit" data-bind="click: savePassword, css: { invalid: ! isValid() }">Set Password</button>
+				</form>
+				
+				<span class="help-block" data-bind="visible: ! token(), text: message"></span>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+</@page>
