--- a/src/main/freemarker/templates/unknown/sendPasswordEmail.html
+++ b/src/main/freemarker/templates/unknown/sendPasswordEmail.html
@@ -1,1 +1,53 @@
-Send my password please
+<@page title="Reset Password">
+
+<script>
+	loadPageScript(function() {
+
+		page.message = ko.observable();
+		page.emailAddress = ko.observable().extend({ required: true, email: true });
+
+		page.sendEmail = function() {
+			if (! page.isValid()) {
+				return;
+			}
+			var temp = {
+				emailAddress: page.emailAddress(),
+				url: window.location.href.replace('sendPasswordEmail','resetPassword')
+			};
+			app.ajax('POST', '/api/passwords/sendResetEmail', JSON.stringify(temp), function(response) {
+				page.message('Please check your email for instructions');
+			});
+		};
+
+		page.isValid = ko.computed(function() {
+			return page.emailAddress.isValid();
+		});
+		
+	});
+	
+</script>
+
+<div class="container" data-bind="with: page">
+
+	<div class="omb_login">
+		<h3 class="omb_authTitle">
+			Reset Your Password
+		</h3>
+		<div class="row omb_row-sm-offset-3">
+			<div class="col-xs-12 col-sm-6">
+				<form class="omb_loginForm" action="" autocomplete="off">
+					<div class="input-group">
+						<span class="input-group-addon" data-bind="css: { validationMessage : emailAddress.isModified() && ! emailAddress.isValid() }"><i class="fa fa-envelope"></i></span> <input data-bind="textInput: emailAddress" type="text" class="form-control" name="username" placeholder="email address">
+					</div>
+					
+					<span class="help-block" style="color: #000" data-bind="text: message"></span>
+
+					<button class="btn btn-lg btn-primary btn-block" type="submit" data-bind="click: sendEmail, css: { invalid: ! isValid() }">Reset Password</button>
+				</form>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+</@page>
