--- a/src/main/freemarker/templates/unknown/login.html
+++ b/src/main/freemarker/templates/unknown/login.html
@@ -4,18 +4,41 @@
 	loadPageScript(function() {
 
 		page.message = ko.observable();
+		page.emailAddress = ko.observable().extend({ required: true, email: true });
+		page.password = ko.observable().extend({ required: true });
 
-		page.onload = function() {
-		}
+		page.login = function() {
+			if (! page.isValid()) {
+				return;
+			}
+			var temp = {
+				emailAddress: page.emailAddress(),
+				password: page.password()
+			};
+			app.ajax('POST', '/api/sessions/login', JSON.stringify(temp), function(response) {
+				if (response && response.sessionToken) {
+					localStorage.sessionToken = response.sessionToken;
+					app.reloadCurrentUser();
+				}
+				if (response && response.message) {
+					page.message(response.message);
+				}
+			});
+		};
 
+		page.isValid = ko.computed(function() {
+			return page.emailAddress.isValid() && page.password.isValid();
+		});
+		
 	});
+	
 </script>
 
 <div class="container" data-bind="with: page">
 
 	<div class="omb_login">
 		<h3 class="omb_authTitle">
-			Login or <a href="#">Sign up</a>
+			Login or <a href="#signUp.html">Sign up</a>
 		</h3>
 		<div class="row omb_row-sm-offset-3 omb_socialButtons">
 			<div class="col-xs-4 col-sm-2">
@@ -41,25 +64,25 @@
 
 		<div class="row omb_row-sm-offset-3">
 			<div class="col-xs-12 col-sm-6">
-				<form class="omb_loginForm" action="" autocomplete="off" method="POST">
+				<form class="omb_loginForm" action="" autocomplete="off">
 					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-user"></i></span> <input type="text" class="form-control" name="username" placeholder="email address">
+						<span class="input-group-addon" data-bind="css: { validationMessage : emailAddress.isModified() && ! emailAddress.isValid() }"><i class="fa fa-fw fa-user"></i></span> <input data-bind="textInput: emailAddress" type="text" class="form-control" name="username" placeholder="email address">
 					</div>
 					<span class="help-block"></span>
 
 					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-lock"></i></span> <input type="password" class="form-control" name="password" placeholder="Password">
+						<span class="input-group-addon" data-bind="css: { validationMessage : password.isModified() && ! password.isValid() }"><i class="fa fa-fw fa-lock"></i></span> <input data-bind="textInput: password" type="password" class="form-control" name="password" placeholder="Password">
 					</div>
-					<span class="help-block">Password error</span>
+					<span class="help-block" data-bind="text: message"></span>
 
-					<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+					<button class="btn btn-lg btn-primary btn-block" type="submit" data-bind="click: login, css: { invalid: ! isValid() }">Login</button>
 				</form>
 			</div>
 		</div>
 		<div class="row omb_row-sm-offset-3">
 			<div class="col-xs-12 col-sm-3">
 				<p class="omb_forgotPwd">
-					<a href="#">Forgot password?</a>
+					<a href="#sendPasswordEmail.html">Forgot password?</a>
 				</p>
 			</div>
 		</div>
