--- a/src/main/freemarker/templates/unknown/resetPassword.html
+++ b/src/main/freemarker/templates/unknown/resetPassword.html
@@ -1,7 +1,7 @@
 <@page title="Reset Password">
 
 <script>
-	loadPageScript(function() {
+	loadPageScript(function(page]) {
 		
 		page.token = ko.observable();
 		page.id = ko.observable();
