--- a/src/main/freemarker/templates/unknown/signUp.html
+++ b/src/main/freemarker/templates/unknown/signUp.html
@@ -1,6 +1,6 @@
 <@page title="Sign Up">
 
-<script> loadPageScript(function() {
+<script> loadPageScript(function(page) {
 
 		function passwordStrength() {
 			if (! page.password()) {
