--- a/src/main/freemarker/templates/unknown/sendPasswordEmail.html
+++ b/src/main/freemarker/templates/unknown/sendPasswordEmail.html
@@ -1,7 +1,7 @@
 <@page title="Reset Password">
 
 <script>
-	loadPageScript(function() {
+	loadPageScript(function(page) {
 
 		page.message = ko.observable();
 		page.emailAddress = ko.observable().extend({ required: true, email: true });
