--- a/src/main/freemarker/templates/index/scripts.html
+++ b/src/main/freemarker/templates/index/scripts.html
@@ -1,1 +1,2 @@
-	<script src="js/yourchoice.js"></script>
+<script src="/adminLTE/AdminLTE.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
