--- a/src/main/freemarker/templates/authenticated/other.html
+++ b/src/main/freemarker/templates/authenticated/other.html
@@ -1,1 +1,17 @@
-This is page other.html
+<@page title="Other">
+
+<script>
+loadPageScript(function(page) {
+	
+	page.onload = function() {
+	}
+	
+});
+</script>
+
+<@widget title="This is another page">
+You may be interested in reading the <a href="https://github.com/almasaeed2010/AdminLTE">Theme Documentation</a> to see all of the styling possibilities.
+</@widget>
+
+
+</@page>
