--- a/src/main/freemarker/templates/index.html
+++ b/src/main/freemarker/templates/index.html
@@ -5,16 +5,25 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
+	<meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 	<title></title>
 	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" type="text/css" />    
 	<link rel="stylesheet" href="theme/unknown.css">
 	<link rel="stylesheet" href="theme/authenticated.css">
 	<#include "index/stylesheets.html"/>
 </head>
 
 <body data-bind='validationOptions: { messageTemplate: "customMessageTemplate", decorateInputElement: true }'>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
@@ -29,7 +38,7 @@
 	</script>
 	<script src="configuration.js"></script>
 	<script src="hello/hello.all.js"></script>
-	
+    	
 	<script type="text/html" id="customMessageTemplate">
 		<span class="input-group-addon validationElement validationMessage" data-bind="visible: field.isModified() && !field.isValid(), validationMessage: field">
 		</span>
@@ -63,13 +72,13 @@
 
 	<!-- ko if: ! me() -->
 	
-	<#include "theme/unknown.html"/>
+	<#include "theme/unknown/unknown.html"/>
 	
 	<!-- /ko -->
 	
 	<!-- ko if: me() -->
 	
-	<#include "theme/authenticated.html"/>
+	<#include "theme/authenticated/authenticated.html"/>
 	
 	<!-- /ko -->
 		
