--- a/src/main/freemarker/templates/theme/authenticated/authenticated-simple.html
+++ b/src/main/freemarker/templates/theme/authenticated/authenticated-simple.html
@@ -13,7 +13,7 @@
 	
 	<ul>
 	<li><a href="#index.html">Welcome</a>
-	<li><a href="#profile.html">Profile</a>
+	<li><a href="#profile.html"></a>
 	<li><a href="#logout.html">Logout</a>
 	</ul>
 		
