--- a/src/main/freemarker/templates/index/scripts.html
+++ b/src/main/freemarker/templates/index/scripts.html
@@ -1,2 +1,6 @@
 <script src="/adminLTE/AdminLTE.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+<script>
+$('body').addClass('sidebar-mini').addClass('login-page');
+</script>
+
