--- a/src/main/freemarker/templates/theme/authenticated/authenticated-header.html
+++ b/src/main/freemarker/templates/theme/authenticated/authenticated-header.html
@@ -132,7 +132,7 @@
                 <a href="#" class="btn btn-default btn-flat">Profile</a>
               </div>
               <div class="pull-right">
-                <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                <a data-bind="click: logout" href="#" class="btn btn-default btn-flat">Sign out</a>
               </div>
             </li>
           </ul>
