--- a/src/main/freemarker/templates/unknown/login.html
+++ b/src/main/freemarker/templates/unknown/login.html
@@ -1,6 +1,7 @@
 <@page title="Login">
 
 <script>
+
 	loadPageScript(function(page) {
 
 		page.message = ko.observable();
@@ -34,59 +35,40 @@
 	
 </script>
 
-<div class="container" data-bind="with: page">
+<div class="login-box-body" data-bind="with: page">
 
-	<div class="omb_login">
-		<h3 class="omb_authTitle">
-			Login or <a href="#signUp.html">Sign up</a>
-		</h3>
-		<div class="row omb_row-sm-offset-3 omb_socialButtons">
-			<div class="col-xs-4 col-sm-2">
-				<a href="#" class="btn btn-lg btn-block omb_btn-facebook" onclick="hello('facebook').login()"> <i class="fa fa-facebook visible-xs"></i> <span class="hidden-xs">Facebook</span>
-				</a>
-			</div>
-			<div class="col-xs-4 col-sm-2">
-				<a href="#" class="btn btn-lg btn-block omb_btn-twitter" onclick="hello('twitter').login()"> <i class="fa fa-twitter visible-xs"></i> <span class="hidden-xs">Twitter</span>
-				</a>
-			</div>
-			<div class="col-xs-4 col-sm-2">
-				<a href="#" class="btn btn-lg btn-block omb_btn-google" onclick="hello('google').login()"> <i class="fa fa-google-plus visible-xs"></i> <span class="hidden-xs">Google+</span>
-				</a>
-			</div>
+	<p class="login-box-msg">Sign in to start your session</p>
+	
+	<div class="input-group form-group">
+		<span class="input-group-addon" data-bind="css: { validationMessage : emailAddress.isModified() && ! emailAddress.isValid() }"> <i class="fa fa-fw fa-envelope"></i>
+		</span> <input data-bind="textInput: emailAddress" type="text" class="form-control" name="username" placeholder="email address"></input>
+	</div>
+	
+	<div class="input-group form-group">
+		<span class="input-group-addon" data-bind="css: { validationMessage : password.isModified() && ! password.isValid() }"> <i class="fa fa-fw fa-lock"></i>
+		</span> <input data-bind="textInput: password" type="password" class="form-control" name="password" placeholder="Password"></input>
+	</div>
+	
+	<span class="login-box-msg warning" data-bind="text: message"></span>
+
+	<div class="row">
+		<div class="col-xs-8">
 		</div>
-
-		<div class="row omb_row-sm-offset-3 omb_loginOr">
-			<div class="col-xs-12 col-sm-6">
-				<hr class="omb_hrOr">
-				<span class="omb_spanOr">or</span>
-			</div>
-		</div>
-
-		<div class="row omb_row-sm-offset-3">
-			<div class="col-xs-12 col-sm-6">
-				<form class="omb_loginForm" action="" autocomplete="off">
-					<div class="input-group">
-						<span class="input-group-addon" data-bind="css: { validationMessage : emailAddress.isModified() && ! emailAddress.isValid() }"><i class="fa fa-fw fa-user"></i></span> <input data-bind="textInput: emailAddress" type="text" class="form-control" name="username" placeholder="email address">
-					</div>
-					<span class="help-block"></span>
-
-					<div class="input-group">
-						<span class="input-group-addon" data-bind="css: { validationMessage : password.isModified() && ! password.isValid() }"><i class="fa fa-fw fa-lock"></i></span> <input data-bind="textInput: password" type="password" class="form-control" name="password" placeholder="Password">
-					</div>
-					<span class="help-block" data-bind="text: message"></span>
-
-					<button class="btn btn-lg btn-primary btn-block" type="submit" data-bind="click: login, css: { invalid: ! isValid() }">Login</button>
-				</form>
-			</div>
-		</div>
-		<div class="row omb_row-sm-offset-3">
-			<div class="col-xs-12 col-sm-3">
-				<p class="omb_forgotPwd">
-					<a href="#sendPasswordEmail.html">Forgot password?</a>
-				</p>
-			</div>
+		<div class="col-xs-4">
+			<button type="submit" class="btn btn-primary btn-block btn-flat" data-bind="click: login, css: { invalid: ! isValid() }">Sign In</button>
 		</div>
 	</div>
+
+	<div class="social-auth-links text-center">
+		<p>- OR -</p>
+		<a href="#" onclick="hello('facebook').login()" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using Facebook</a>
+		<a href="#" onclick="hello('twitter').login()" class="btn btn-block btn-social btn-twitter btn-flat"><i class="fa fa-twitter"></i> Sign in using Twitter</a>
+		<a href="#" onclick="hello('google').login()" class="btn btn-block btn-social btn-google-plus btn-flat"><i class="fa fa-google-plus"></i>Sign in using Google</a>
+	</div>
+
+	<a href="#sendPasswordEmail.html">I forgot my password</a>
+	<br/>
+	<a href="#signUp.html" class="text-center">Register a new membership</a>
 
 </div>
 
