--- a/src/main/freemarker/templates/unknown/sendPasswordEmail.html
+++ b/src/main/freemarker/templates/unknown/sendPasswordEmail.html
@@ -27,26 +27,28 @@
 	
 </script>
 
-<div class="container" data-bind="with: page">
+<div class="login-box-body" data-bind="with: page">
 
-	<div class="omb_login">
-		<h3 class="omb_authTitle">
-			Reset Your Password
-		</h3>
-		<div class="row omb_row-sm-offset-3">
-			<div class="col-xs-12 col-sm-6">
-				<form class="omb_loginForm" action="" autocomplete="off">
-					<div class="input-group">
-						<span class="input-group-addon" data-bind="css: { validationMessage : emailAddress.isModified() && ! emailAddress.isValid() }"><i class="fa fa-envelope"></i></span> <input data-bind="textInput: emailAddress" type="text" class="form-control" name="username" placeholder="email address">
-					</div>
-					
-					<span class="help-block" style="color: #000" data-bind="text: message"></span>
+	<p class="login-box-msg">Reset your password</p>
+	
+	<div class="input-group form-group">
+		<span class="input-group-addon" data-bind="css: { validationMessage : emailAddress.isModified() && ! emailAddress.isValid() }"> <i class="fa fa-fw fa-envelope"></i>
+		</span> <input data-bind="textInput: emailAddress" type="text" class="form-control" name="username" placeholder="email address"></input>
+	</div>
+	
+	<span class="login-box-msg warning" data-bind="text: message"></span>
 
-					<button class="btn btn-lg btn-primary btn-block" type="submit" data-bind="click: sendEmail, css: { invalid: ! isValid() }">Reset Password</button>
-				</form>
-			</div>
+	<div class="row">
+		<div class="col-xs-8">
+		</div>
+		<div class="col-xs-4">
+			<button type="submit" class="btn btn-primary btn-block btn-flat" data-bind="click: sendEmail, css: { invalid: ! isValid() }">Reset Password</button>
 		</div>
 	</div>
+
+	<a href="#login.html">I remembered my password</a>
+	<br/>
+	<a href="#signUp.html" class="text-center">Register a new membership</a>
 
 </div>
 
