Corrected hashchange issue and theme initialization

--- a/src/main/freemarker/templates/index.html
+++ b/src/main/freemarker/templates/index.html
@@ -88,6 +88,8 @@
 	
 	<script src="js/application.js"></script>
 	
+	<#include "theme/common.html"/>
+	
 	<script>
  		ko.applyBindings(app);
 		app.initialize();
