--- a/src/main/freemarker/templates/unknown/signUp.html
+++ b/src/main/freemarker/templates/unknown/signUp.html
@@ -121,7 +121,7 @@
 		<div class="col-xs-8">
 		</div>
 		<div class="col-xs-4">
-			<button type="submit" class="btn btn-primary btn-block btn-flat" data-bind="click: login, css: { invalid: ! isValid() }">Register</button>
+			<button type="submit" class="btn btn-primary btn-block btn-flat" data-bind="click: signUp, css: { invalid: ! isValid() }">Register</button>
 		</div>
 	</div>
 
