--- a/src/main/freemarker/templates/theme/authenticated/authenticated.html
+++ b/src/main/freemarker/templates/theme/authenticated/authenticated.html
@@ -1,6 +1,8 @@
 <#-- Replace this file with your theme framework - only the body tags have been defined externally.
      This file MUST include an element with the id profoundInnerPage for hash replacement to work -->
 
+<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
+
 <div class="wrapper skin-blue-light">
 
 	<#include "authenticated-header.html"/>
