Made a start at some common Knockout bindings

--- a/src/main/freemarker/templates/index.html
+++ b/src/main/freemarker/templates/index.html
@@ -66,6 +66,9 @@
 	});
 	ko.validation.locale('en-US');
 		</script>
+		
+	<script src="js/knockout-bindings.js"></script>	
+
 	<#include "index/scripts.html"/>
 	
 	<script src="js/profound.js"></script>
